docs/stylesheets/solarized.css
/* ... */
[data-md-color-scheme="default"] {
  --md-default-bg-color: rgb(var(--solarized-base3));
  --md-default-bg-color--light: rgb(var(--solarized-base2));
  --md-default-bg-color--lighter: rgb(var(--solarized-base1));
  --md-default-bg-color--lightest: rgb(var(--solarized-base0));
  --md-default-fg-color: rgb(var(--solarized-base02));
  --md-default-fg-color--light: rgb(var(--solarized-base01));
  --md-default-fg-color--lighter: rgb(var(--solarized-base00));
  --md-default-fg-color--lightest: rgb(var(--solarized-base0));
  --md-primary-bg-color: rgb(var(--solarized-base02));
  --md-primary-fg-color--dark: rgb(var(--solarized-base2));
  --md-primary-fg-color: rgb(var(--solarized-green));
  --md-primary-fg-color--light: rgba(var(--solarized-green), 0.2);
  --md-accent-fg-color: rgb(var(--solarized-cyan));
  --md-footer-fg-color: rgb(var(--solarized-base03));
  --md-footer-fg-color--light: rgb(var(--solarized-base02));
  --md-footer-fg-color--lighter: rgb(var(--solarized-base01));
  --md-footer-bg-color: rgb(var(--solarized-base3));
  --md-footer-bg-color--dark: rgb(var(--solarized-base2));
  --md-code-fg-color: rgb(var(--solarized-base02));
  --md-code-bg-color: rgb(var(--solarized-base2));
  --md-code-hl-color: rgb(var(--solarized-base02));
  --md-typeset-kbd-color: rgb(var(--solarized-base2));
  --md-typeset-kbd-border-color: rgb(var(--solarized-green));
  --md-typeset-kbd-accent-color: rgb(var(--solarized-base3));
  --md-typeset-mark-color: rgb(var(--solarized-green));
}

[data-md-color-scheme="slate"] {
  --md-default-bg-color: rgb(var(--solarized-base03));
  --md-default-bg-color--light: rgb(var(--solarized-base02));
  --md-default-bg-color--lighter: rgb(var(--solarized-base01));
  --md-default-bg-color--lightest: rgb(var(--solarized-base00));
  --md-default-fg-color: rgb(var(--solarized-base0));
  --md-default-fg-color--light: rgb(var(--solarized-base00));
  --md-default-fg-color--lighter: rgb(var(--solarized-base01));
  --md-default-fg-color--lightest: rgb(var(--solarized-base02));
  --md-primary-bg-color: rgb(var(--solarized-base2));
  --md-primary-fg-color--dark: rgb(var(--solarized-base02));
  --md-primary-fg-color: rgb(var(--solarized-cyan));
  --md-primary-fg-color--light: rgba(var(--solarized-cyan), 0.2);
  --md-accent-fg-color: rgb(var(--solarized-green));
  --md-footer-fg-color: rgb(var(--solarized-base2));
  --md-footer-fg-color--light: rgb(var(--solarized-base1));
  --md-footer-fg-color--lighter: rgb(var(--solarized-base00));
  --md-footer-bg-color: rgb(var(--solarized-base03));
  --md-footer-bg-color--dark: rgb(var(--solarized-base02));
  --md-code-fg-color: rgb(var(--solarized-base2));
  --md-code-bg-color: rgb(var(--solarized-base02));
  --md-code-hl-color: rgb(var(--solarized-base2));
  --md-typeset-kbd-color: rgb(var(--solarized-base02));
  --md-typeset-kbd-border-color: rgb(var(--solarized-cyan));
  --md-typeset-kbd-accent-color: rgb(var(--solarized-base03));
}

/* NOTE Header: Hide shadow under header */
.md-header[data-md-state="shadow"],
.md-header--shadow {
  box-shadow: none;
}

/* ANCHOR Header Recolors */
.md-header {
  background-color: var(--md-default-bg-color--light);
}

.md-tabs {
  background-color: var(--md-primary-fg-color--light);
  border-top: .05rem solid var(--md-primary-fg-color);
}

.md-footer {
  border-top: .05rem solid var(--md-primary-fg-color);
}

.md-footer__title {
  color: var(--md-footer-fg-color--light);
}

.md-footer__link {
  margin-top: 10px;
}

.md-nav__source {
  background-color: var(--md-primary-fg-color--light);
  border-top: .05rem solid var(--md-primary-fg-color);
}

.md-tabs__item--active .md-tabs__link {
  color: var(--md-primary-fg-color);
  text-decoration: underline solid var(--md-primary-fg-color);
}

.md-banner {
  background-color: var(--md-primary-fg-color--light);
}

/* NOTE Icon Recolor */
.md-source__icon {
  color: var(--md-default-fg-color);
}

[dir="ltr"] .md-source__repository {
  color: var(--md-default-fg-color);
}

.md-header__option,
.md-header__button.md-icon {
  color: var(--md-default-fg-color);
}

.md-social__link:nth-child(1) svg {
  fill: #6364FF;
}

.md-social__link:nth-child(2) svg {
  fill: var(--md-default-fg-color);
}

.md-social__link:nth-child(3) svg {
  fill: #609926;
}

/* ANCHOR Search */
.md-search__form {
  border: 1px solid var(--md-primary-fg-color);
  background-color: var(--md-default-bg-color) !important;
}

.md-search__icon,
.md-search-result__icon,
.md-search__input::placeholder {
  color: var(--md-default-fg-color--lighter) !important;
  scale: 95%;
}

.md-search-result__meta {
  background-color: var(--md-default-bg-color--light);
}

/* SECTION Pygments */

.highlight span.filename {
  border-top-left-radius: .3rem;
  border-top-right-radius: .3rem;
  border-bottom: .05rem solid var(--md-primary-fg-color);
}
.highlight .bp { color: rgb(var(--solarized-blue)); } /* Name.Builtin.Pseudo */
.highlight .c { color: rgb(var(--solarized-base00)); } /* Comment */
.highlight .c1 { color: rgb(var(--solarized-base00)); } /* Comment.Single */
.highlight .cm { color: rgb(var(--solarized-base00)); } /* Comment.Multiline */
.highlight .cp { color: rgb(var(--solarized-green)); } /* Comment.Preproc */
.highlight .cs { color: rgb(var(--solarized-green)); } /* Comment.Special */
.highlight .err { color: rgb(var(--solarized-base01)); } /* Error */
.highlight .g { color: rgb(var(--solarized-base01)); } /* Generic */
.highlight .ge {
  color: rgb(var(--solarized-base01));
  font-style: italic;
} /* Generic.Emph */
.highlight .gd { color: rgb(var(--solarized-cyan)); } /* Generic.Deleted */
.highlight .gh { color: rgb(var(--solarized-orange)); } /* Generic.Heading */
.highlight .gi { color: rgb(var(--solarized-green)); } /* Generic.Inserted */
.highlight .go { color: rgb(var(--solarized-base01)); } /* Generic.Output */
.highlight .gp { color: rgb(var(--solarized-base01)); } /* Generic.Prompt */
.highlight .gr { color: rgb(var(--solarized-red)); } /* Generic.Error */
/* ... */

